# Clowder

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: App.svelte  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: credentials.rs  keychain.rs  main.rs  settings.rs  site.rs
src-tauri/src/e621/: client.rs  ech.rs  mod.rs  types.rs
src-tauri/src/vpn/: config.rs  device.rs  dns.rs  mod.rs  mullvad.rs  runtime.rs  socks.rs  storage.rs
src/components/: AccountDialog.svelte  CommentsPanel.svelte  OriginalPostSidebar.svelte  OriginalViewer.svelte  PostGrid.svelte  PostSidebar.svelte  SearchHeader.svelte  SettingsDialog.svelte  TagGroup.svelte  Toasts.svelte  Toolbar.svelte  VideoControls.svelte  VideoPlayer.svelte
src/components/icons/: CloseIcon.svelte  HeartIcon.svelte  Spinner.svelte
src/components/settings/: AboutSection.svelte  AccountSection.svelte  AppearanceSection.svelte  DownloadsSection.svelte  PlaybackSection.svelte  VpnSection.svelte
src/lib/: account-store.svelte.ts  app-store.svelte.ts  download-store.svelte.ts  e621.test.ts  e621.ts  errors.ts  keyboard.ts  playback.svelte.ts  post-actions-store.svelte.ts  search-history-store.svelte.ts  search-store.svelte.ts  search.test.ts  search.ts  settings-store.svelte.ts  settings.ts  site.ts  template.test.ts  template.ts  toast-store.svelte.ts  types.ts  update-store.svelte.ts  viewer-store.svelte.ts  vpn-store.svelte.ts  vpn.ts  window.ts
