[package]
name = "clowder"
version = "0.3.0"
edition = "2024"
license = "GPL-3.0"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
keyring = { version = "3.6", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "sync", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["env-filter", "fmt", "ansi"] }
unicode-normalization = "0.1.24"
url = "2.5"
wreq = { version = "5.3.0", default-features = false, features = ["webpki-roots", "json", "gzip", "brotli", "charset", "macos-system-configuration"] }
wreq-util = "2.2.6"
