[package]
name = "clowder"
version = "0.7.0"
edition = "2024"
license = "GPL-3.0"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
boringtun = { version = "0.7", default-features = false }
bytes = "1"
keyring = "4.0.1"
keyring-core = "1.0.0"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
smoltcp = { version = "0.13.1", default-features = false, features = ["std", "log", "medium-ip", "proto-ipv4", "proto-ipv6", "socket-tcp", "socket-udp"] }
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "sync", "time", "io-util", "net", "macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["env-filter", "fmt", "ansi"] }
unicode-normalization = "0.1.24"
url = "2.5"
wreq = { version = "6.0.0-rc.28", default-features = false, features = ["webpki-roots", "json", "gzip", "brotli", "charset", "query", "form", "socks", "system-proxy"] }
wreq-util = "3.0.0-rc.11"
